tests/ui/consts/const_unsafe_unreachable_ub.stderr
error[E0080]: entering unreachable code
  --> $DIR/const_unsafe_unreachable_ub.rs:10:28
   |
LL | const BAR: bool = unsafe { foo(false) };
   |                            ^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `foo`
  --> $DIR/const_unsafe_unreachable_ub.rs:4:18
   |
LL |         false => std::hint::unreachable_unchecked(),
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
